--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -70,7 +70,7 @@
             </button>
             <ul class="dropdown-menu dropdown-menu-end">
               <li><a class="dropdown-item" href="/owner/items/new"><i class="bi bi-box"></i> عنصر جديد</a></li>
-              <li><a class="dropdown-item" href="/messages/new"><i class="bi bi-chat-left-text"></i> منشور/رسالة</a></li>
+              <li><a class="dropdown-item" href="/messages"><i class="bi bi-chat-left-text"></i> منشور/رسالة</a></li>
             </ul>
           </div>
 
