--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -52,7 +52,7 @@
 
     <div class="d-flex gap-2 ms-md-auto">
       {% if session_user and session_user.id != profile_user.id %}
-        <a href="/messages/new?to={{ profile_user.id }}" class="btn btn-primary">
+        <a href="/messages/new?to={{ user.id }}" class="btn btn-primary">
           <i class="bi bi-chat-text"></i> مراسلة
         </a>
       {% endif %}
